<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dalton.braillekeyboard.MainActivity" >

    <item
        android:id="@+id/action_braille_displays"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/braille_displays_title"/>

    <item
        android:id="@+id/action_quick_start"
        android:orderInCategory="75"
        android:showAsAction="never"
        android:title="@string/quick_start_title"/>

    <item
        android:id="@+id/action_accessibility_settings"
        android:orderInCategory="85"
        android:showAsAction="never"
        android:title="@string/button_accessibility_settings"/>

    <item
        android:id="@+id/action_check_updates"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/button_check_updates"/>

    <item
        android:id="@+id/action_report_issue"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/button_report_issue"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
