<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_setup_intro" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/user_profile_setup_start_profile_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/user_profile_start_profile_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/user_profile_setup_typing_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_profile_setup_dots_title" />

        <Spinner
            android:id="@+id/user_profile_dots_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pref_default_keyboard_title" />

        <Spinner
            android:id="@+id/user_profile_keyboard_layout_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pref_keyboard_style_title" />

        <Spinner
            android:id="@+id/user_profile_keyboard_style_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pref_echo_feedback_title" />

        <Spinner
            android:id="@+id/user_profile_keyboard_echo_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/user_profile_misspellings_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_echo_misspellings_title" />

        <CheckBox
            android:id="@+id/user_profile_double_space_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_double_space_period_title" />

        <CheckBox
            android:id="@+id/user_profile_auto_caps_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_auto_caps_title" />

        <CheckBox
            android:id="@+id/user_profile_voice_shortcut_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_voice_shortcut_title" />

        <CheckBox
            android:id="@+id/user_profile_uses_braille_display_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_setup_uses_display_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/user_profile_setup_speech_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_profile_tts_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Button
            style="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onOpenTtsSettings"
            android:text="@string/button_tts_settings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/user_profile_setup_updates_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/user_profile_auto_updates_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_auto_check_updates_title" />

        <CheckBox
            android:id="@+id/user_profile_crash_prompt_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_prompt_crash_report_title" />

        <CheckBox
            android:id="@+id/user_profile_save_named_profile_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/user_profile_setup_save_named_profile" />

        <EditText
            android:id="@+id/user_profile_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_profile_setup_profile_name_hint"
            android:inputType="textCapWords" />

        <Button
            style="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:onClick="onSaveProfileSettings"
            android:text="@string/user_profile_setup_save_button" />

    </LinearLayout>
</ScrollView>
